--- a/TopData/build.gradle
+++ b/TopData/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 
+    implementation 'com.amazonaws:aws-java-sdk-dynamodb:1.12.173'
+
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'org.hibernate.validator:hibernate-validator:7.0.2.Final'
 }
