--- a/TopDynamoDB/build.gradle
+++ b/TopDynamoDB/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 
     implementation 'com.amazonaws:aws-java-sdk-dynamodb:1.12.173'
+    implementation 'software.amazon.awssdk:dynamodb:2.17.162'
+    implementation 'software.amazon.awssdk:dynamodb-enhanced:2.17.162'
 
     implementation 'com.google.code.gson:gson:2.9.0'
 }
